[tool.poetry]
name = "se2020"
version = "0.1.0"
description = "Morse encoder"
authors = ["PinarKaragulle <72393604+PinarKaragulle@users.noreply.github.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
